sample/sample653.nev

func f1(var a : int, var b : int) -> int
{
    0
}

func main() -> int
{
    let a = 1;
    let b = 2;

    f1(a, b);

    0
}
